src/objects/CaseCoordinator__c.object
<CustomObject>
    <fields>
        <fullName>AssessmentContainerId__c</fullName>
        <label>AssessmentContainerId</label>
        <referenceTo>AssessmentContainer__c</referenceTo>
        <relationshipLabel>aCaseCoordinators</relationshipLabel>
        <relationshipName>aCaseCoordinators</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current_Employment__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Current Employment</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_School_Enrollment__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Current School Enrollment</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diploma_Status_at_Intake__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Diploma Status at Intake</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diploma_Type__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Diploma Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_have_Insurance__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Do you have Insurance?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Drugs_Used_Other__c</fullName>
        <description>Copied to Contact when assessment complete: Substance AbuseCopied from Contact when Assessment saved until completion: Psychosocial</description>
        <label>Drugs Used (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Drugs_Used__c</fullName>
        <description>Copied to Contact when assessment complete: Substance AbuseCopied from Contact when Assessment saved until completion: Psychosocial</description>
        <inlineHelpText>Check any substances ever used by participant.</inlineHelpText>
        <label>Drugs Used</label>
        <picklist>
            <picklistValues>
                <fullName>Alcohol</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alcohol - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amphetamines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benzodiazepines - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crack Cocaine - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ecstasy - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Mild</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Moderate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hallucinogens - Severe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhalants - Mild</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Education_Plan__c</fullName>
        <description>Renamed from &quot;Education Section 2&quot;</description>
        <inlineHelpText>Staff Recommendations and Plan</inlineHelpText>
        <label>Education Plan</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Education_Section_1__c</fullName>
        <label>Education Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Employed_at_Intake__c</fullName>
        <label>Employed at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Employed P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Employer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employment_Section_1__c</fullName>
        <label>Employment Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ever_recvd_counseling_other_MH_services__c</fullName>
        <label>Ever recvd counseling other MH services?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expecting_a_Child__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Expecting a Child?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family_Peers_Section_1__c</fullName>
        <label>Family &amp; Peers Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gang_Involvement__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Gang Involvement?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospitalized_resd_prgm_for_MH_reasons__c</fullName>
        <label>Hospitalized/resd prgm for MH reasons?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hourly_Pay__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Hourly Pay</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_many_children__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>How many children?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_many_credits_have_you_earned__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>How many credits have you earned?</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Incarcerated_Family_Members__c</fullName>
        <description>Copied to Contact until assessment complete</description>
        <label>Incarcerated Family Members?</label>
        <picklist>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Incarcerated Family Members</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Indication_of_Phys_Health_Problem__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Insurance_Number__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Provider__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Job Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_School_Attended__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Copied from Contact until assessment complete</description>
        <label>Last School Attended</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CCAssessments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Issues_at_Interview__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Mental Health Issues at Interview</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mental_Health_Section_1__c</fullName>
        <label>Mental Health Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phys_Health_Problem__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Other Phys Health Problem</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Guardian__c</fullName>
        <label>Parent/Guardian</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Physical_Health_Section_1__c</fullName>
        <label>Physical Health Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Prescribe_take_med_to_treat_MH_problem__c</fullName>
        <label>Prescribe/take med to treat MH problem?</label>
        <picklist>
            <picklistValues>
                <fullName>Currently</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In the last 5 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 5 years ago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Never</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School_Other__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School (Other)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Leaving_School__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>Reason for Leaving School</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relation_To_Client__c</fullName>
        <label>Relation To Client</label>
        <picklist>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandparent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spouse/CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt/Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Relative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Girl/Boy Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_End_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in Past Two Months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but Not Attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School_Institution_Hours_from_and_to__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School/Institution Hours (from and to)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School_Start_Date__c</fullName>
        <description>Copied from Contact until assessment complete</description>
        <label>School Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_Section_1__c</fullName>
        <label>Substance Abuse Section 1</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_at_Interview__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Substance Abuse at Interview</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Current_Grade__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Current Grade</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Diploma_Status_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Diploma Status at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>High School Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IEP Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate&apos;s Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No High School/HSE Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HSE Diploma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Employed_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Employed  at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Employed P/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employed F/T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unemployed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Has_Insurance__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Has Insurance</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Update_Indication_of_Phys_Health_Problem__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Indication of Phys Health Problem</label>
        <picklist>
            <picklistValues>
                <fullName>Allergies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asthma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuberculosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diabetes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Number__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Insurance Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Insurance_Provider__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Insurance Provider</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Last_Grade_Completed__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Last Grade Completed</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_No_of_High_School_Credits__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update No. of High School Credits</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Update_Other_Phys_Health_Problem__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update Other Phys Health Problem</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Update_School_GED_Enrollment_at_Intake__c</fullName>
        <description>Copied to Contact when assessment complete</description>
        <label>Update School/HSE Enrollment at Intake</label>
        <picklist>
            <picklistValues>
                <fullName>Attended in past two months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled but not attending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>What_grade_are_you_currently_in__c</fullName>
        <description>Copied to Contact when assessment completed</description>
        <label>What grade are you currently in?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>What_is_the_last_grade_you_completed__c</fullName>
        <description>Copied to Contact when assessment completed</description>
        <label>What is the last grade you completed?</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Hours_from_and_to__c</fullName>
        <description>Copied from Contact when Assessment saved until completion</description>
        <label>Work Hours (from and to)</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>aCaseCoordinator</label>
    <nameField>
        <label>aCaseCoordinator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>aCaseCoordinators</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>